[gd_scene load_steps=29 format=3 uid="uid://clk3wuc22eevs"]

[ext_resource type="Script" uid="uid://bmb8emw4mbpq3" path="res://Scripts/Enemies/Enemy_HermitCrab.gd" id="1_5llmy"]
[ext_resource type="Texture2D" uid="uid://dyqeb36ox6iv0" path="res://Sprites/Player/PlayerShadow.png" id="2_7ftjq"]
[ext_resource type="Texture2D" uid="uid://c5p3sna0jmnrm" path="res://Sprites/Enemies/HermitCrab_Rock_SpriteSheet.png" id="3_5llmy"]
[ext_resource type="AudioStream" uid="uid://bpw5hpam3lt6q" path="res://Audios/hit.ogg" id="4_py107"]
[ext_resource type="AudioStream" uid="uid://bkmn6uw0nnfje" path="res://Audios/punch_impact.ogg" id="5_in4u0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m07os"]
radius = 3.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7ftjq"]
atlas = ExtResource("3_5llmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_504un"]
atlas = ExtResource("3_5llmy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgwol"]
atlas = ExtResource("3_5llmy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5llmy"]
atlas = ExtResource("3_5llmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8srps"]
atlas = ExtResource("3_5llmy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eenei"]
atlas = ExtResource("3_5llmy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h2tn"]
atlas = ExtResource("3_5llmy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qceon"]
atlas = ExtResource("3_5llmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl783"]
atlas = ExtResource("3_5llmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jnap"]
atlas = ExtResource("3_5llmy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahh34"]
atlas = ExtResource("3_5llmy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxc2y"]
atlas = ExtResource("3_5llmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyk1k"]
atlas = ExtResource("3_5llmy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v36a2"]
atlas = ExtResource("3_5llmy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v6o5"]
atlas = ExtResource("3_5llmy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e6vho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ftjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_504un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgwol")
}],
"loop": false,
"name": &"appear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5llmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8srps")
}, {
"duration": 2.01,
"texture": SubResource("AtlasTexture_eenei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h2tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qceon")
}],
"loop": false,
"name": &"appear_hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl783")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jnap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahh34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxc2y")
}],
"loop": false,
"name": &"hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyk1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v36a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v6o5")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ebxm7"]
radius = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w24je"]
radius = 9.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5llmy"]
radius = 134.13426

[sub_resource type="Animation" id="Animation_py107"]
resource_name = "damage"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.4, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.53745896, 0, 0.073713206, 1), Color(1, 1, 1, 1), Color(0.5174277, 0, 0.16498286, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_in4u0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33lq7"]
_data = {
&"RESET": SubResource("Animation_in4u0"),
&"damage": SubResource("Animation_py107")
}

[node name="HermitCrab" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_5llmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_m07os")

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("2_7ftjq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -12)
sprite_frames = SubResource("SpriteFrames_e6vho")
animation = &"appear_hide"
autoplay = "default"

[node name="HurtBox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(0, -18)
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 18)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_ebxm7")
debug_color = Color(0.7490196, 0.4627451, 0, 0.3137255)

[node name="AttackHitbox" type="Area2D" parent="." groups=["Enemy"]]
rotation = 1.5707964
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
modulate = Color(0.8618463, 2.8878452e-07, 0.49752194, 1)
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_w24je")
debug_color = Color(0.8478625, 0.0009508711, 0.90637434, 0.41960785)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 14.0
neighbor_distance = 32.0
max_neighbors = 4
debug_enabled = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_5llmy")

[node name="AudioStreamPlayer_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_py107")

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="RevealTimer" type="Timer" parent="."]
one_shot = true

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true

[node name="HideLockTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer_Damage" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_33lq7")
}

[node name="AudioStreamPlayer_Inmortal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_in4u0")
bus = &"Effects"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="RevealTimer" to="." method="_on_reveal_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="timeout" from="HideLockTimer" to="." method="_on_hide_lock_timer_timeout"]
